--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "author": "Bruno Orlandi <brorlandi@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
     "express-restify-mongoose": "^4.1.3",
-    "method-override": "^2.3.7",
-    "mongoose": "^4.7.6"
+    "mongoose": "^4.7.6",
+    "restify": "^4.3.0",
+    "restify-plugins": "^1.5.0"
   }
 }
